--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "docpad-plugin-text": "2.x",
     "docpad-plugin-related": "2.x",
     "docpad-plugin-livereload": "2.x",
-    "docpad-plugin-sass": "~2.4.5"
+    "docpad-plugin-sass": "~2.4.5",
+    "bal-util": "~2.0.5",
+    "grunt": "~0.4.1",
+    "browserify": "~2.13.2"
   },
   "main": "node_modules/docpad/bin/docpad-server"
 }
