--- a/package.json
+++ b/package.json
@@ -23,22 +23,22 @@
     "npm": "1.2.x"
   },
   "dependencies": {
-    "docpad": "6.x",
-    "docpad-plugin-downloader": "2.x",
-    "docpad-plugin-cleanurls": "2.x",
-    "docpad-plugin-coffeescript": "2.x",
-    "docpad-plugin-eco": "2.x",
-    "docpad-plugin-less": "2.x",
-    "docpad-plugin-marked": "2.x",
-    "docpad-plugin-partials": "~2.6.2",
-    "docpad-plugin-stylus": "2.x",
-    "docpad-plugin-text": "2.x",
-    "docpad-plugin-related": "2.x",
-    "docpad-plugin-livereload": "2.x",
-    "docpad-plugin-sass": "~2.4.5",
+    "docpad": "~6.45.0",
+    "docpad-plugin-downloader": "~2.1.2",
+    "docpad-plugin-cleanurls": "~2.5.0",
+    "docpad-plugin-coffeescript": "~2.2.2",
+    "docpad-plugin-eco": "~2.0.2",
+    "docpad-plugin-less": "~2.1.3",
+    "docpad-plugin-marked": "~2.1.1",
+    "docpad-plugin-partials": "~2.6.3",
+    "docpad-plugin-stylus": "~2.3.1",
+    "docpad-plugin-text": "~2.2.4",
+    "docpad-plugin-related": "~2.0.5",
+    "docpad-plugin-sass": "~2.6.0",
     "bal-util": "~2.0.5",
     "grunt": "~0.4.1",
     "browserify": "~2.13.2"
   },
-  "main": "node_modules/docpad/bin/docpad-server"
+  "main": "node_modules/docpad/bin/docpad-server",
+  "devDependencies": {}
 }
