--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "bal-util": "~2.0.5",
     "grunt": "~0.4.1",
     "browserify": "~2.13.2",
-    "uglify-js": "~2.3.6"
+    "uglify-js": "~2.3.6",
+    "eco": "~1.1.0-rc-3"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "devDependencies": {}
