--- a/package.json
+++ b/package.json
@@ -23,23 +23,25 @@
     "npm": "1.2.x"
   },
   "dependencies": {
-    "docpad": "~6.45.0",
-    "docpad-plugin-downloader": "~2.1.2",
-    "docpad-plugin-cleanurls": "~2.5.0",
-    "docpad-plugin-coffeescript": "~2.2.2",
-    "docpad-plugin-eco": "~2.0.2",
-    "docpad-plugin-less": "~2.1.3",
-    "docpad-plugin-marked": "~2.1.1",
-    "docpad-plugin-partials": "~2.6.3",
-    "docpad-plugin-stylus": "~2.3.1",
-    "docpad-plugin-text": "~2.2.4",
-    "docpad-plugin-related": "~2.0.5",
-    "docpad-plugin-sass": "~2.6.0",
-    "bal-util": "~2.0.5",
-    "grunt": "~0.4.1",
-    "browserify": "~2.13.2",
-    "uglify-js": "~2.3.6",
-    "eco": "~1.1.0-rc-3"
+    "bal-util": "^2.4.1",
+    "browserify": "~3.38.1",
+    "docpad": "~6.64.0",
+    "docpad-plugin-cleanurls": "~2.7.0",
+    "docpad-plugin-coffeescript": "~2.4.0",
+    "docpad-plugin-downloader": "~2.1.4",
+    "docpad-plugin-eco": "~2.0.3",
+    "docpad-plugin-less": "~2.4.1",
+    "docpad-plugin-marked": "~2.2.0",
+    "docpad-plugin-partials": "~2.9.0",
+    "docpad-plugin-related": "~2.2.2",
+    "docpad-plugin-sass": "~2.7.1",
+    "docpad-plugin-stylus": "~2.6.0",
+    "docpad-plugin-text": "~2.3.2",
+    "eco": "~1.1.0-rc-3",
+    "grunt": "~0.4.4",
+    "safeps": "^2.2.11",
+    "uglify-js": "~2.4.13",
+    "uglifyjs": "^2.3.6"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "devDependencies": {}
