--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "bal-util": "^2.4.1",
     "browserify": "~3.38.1",
-    "docpad": "~6.64.0",
+    "docpad": "^6.64.3",
     "docpad-plugin-cleanurls": "~2.7.0",
     "docpad-plugin-coffeescript": "~2.4.0",
     "docpad-plugin-downloader": "~2.1.4",
