--- a/package.json
+++ b/package.json
@@ -25,11 +25,10 @@
   "dependencies": {
     "bal-util": "^2.4.1",
     "browserify": "~3.38.1",
-    "docpad": "~6.64.3",
     "docpad-plugin-cleanurls": "~2.7.0",
     "docpad-plugin-coffeescript": "~2.4.0",
     "docpad-plugin-downloader": "~2.1.4",
-    "docpad-plugin-eco": "~2.0.3",
+    "docpad-plugin-eco": "~2.1.0",
     "docpad-plugin-less": "~2.4.1",
     "docpad-plugin-marked": "~2.2.0",
     "docpad-plugin-partials": "~2.9.0",
@@ -41,7 +40,8 @@
     "grunt": "~0.4.4",
     "safeps": "^2.2.11",
     "uglify-js": "~2.4.13",
-    "uglifyjs": "^2.3.6"
+    "uglifyjs": "^2.3.6",
+    "docpad": "~6.69.2"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "devDependencies": {}
