--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ title: Renuo Internet Solutions
 email: info@renuo.ch
 description: >
   Renuo AG, Internet solutions
+keywords: >
+  Renuo, Internet soulutions, Web, Websites, Webseite, Internet Seite, Internetseite, Homepage, Homepages, Consulting,
+  Software Engineering, Ruby, Ruby on Rails, mobile, mobile apps, JavaScript, nodejs, node, android, ipad, iphone,
+  rails, professional, Webagentur, Websiten, Web 2.0, CMS, Web-Applikationen, E-Commerce Lösungen
 baseurl: ''
 url: 'https://www.renuo.ch'
 twitter_username: renuo
