--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ keywords: >
   Renuo, Internet soulutions, Web, Websites, Webseite, Internet Seite, Internetseite, Homepage, Homepages, Consulting,
   Software Engineering, Ruby, Ruby on Rails, mobile, mobile apps, JavaScript, nodejs, node, android, ipad, iphone,
   rails, professional, Webagentur, Websiten, Web 2.0, CMS, Web-Applikationen, E-Commerce Lösungen
+author: Renuo GmbH | info@renuo.ch | http://www.renuo.ch
 baseurl: ''
 url: 'https://www.renuo.ch'
 twitter_username: renuo
