--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@
 title: Renuo Internet Solutions
 email: info@renuo.ch
 description: >
-  Renuo AG, Internet solutions
+  Die Renuo GmbH ist Spezialist in den Bereichen individuelle Webentwicklung, mobile Applikationen,
+  responsive Design und Content Management.
 keywords: >
   Renuo, Internet soulutions, Web, Websites, Webseite, Internet Seite, Internetseite, Homepage, Homepages, Consulting,
   Software Engineering, Ruby, Ruby on Rails, mobile, mobile apps, JavaScript, nodejs, node, android, ipad, iphone,
