Move bin/check to bin/check-legacy, use overcommit in bin/check

--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -20,7 +20,7 @@
 PreCommit:
   RenuoBinCheck:
     enabled: true
-    command: './bin/check'
+    command: './bin/check-legacy'
   CommitMsg:
     enabled: true
   CoffeeLint:
